# app.Builder.js.depricated

./: .gitignore  .gitmodules  1.rej  AUTHORS  Builder.js  File.js  INSTALL.txt  JSDOC  JsParser.js  Makefile  Makefile.am  Observable.js  Options.js  ProjectManager.js  README  README.txt  Resources.vala  Spawn.js  String.js  TODO.vala.version  Test.FileWrite.js  Test.GtkWriter  Test.GtkWriter.js  Test.GtkWriter.vala  Test.GtkWriter.vala.c  XObject.js  aclocal.m4  autogen.sh  bjstester.js  builder.html  builder.html.js  builder.sh  builder4.desktop  builder_debug.html  builder_run.js  config.status  configure  configure.ac  console.js  dbgenerate.js  (+18 more)
Builder/: About.bjs  AddPropertyPopup.js  DialogConfirm.js  DialogNewComponent.bjs  DialogNewComponent.js  DialogSaveTemplate.bjs  DialogSaveTemplate.js  DialogTemplateSelect.js  EditProject.bjs  EditProject.js  Editor.js  LeftPanel.js  LeftPanelPopup.js  LeftProjectTree.js  LeftProps.js  LeftTopPanel.js  LeftTree.js  LeftTreeMenu.js  MidPropTree.js  Provider.js  RightBrowser.js  RightEditor.js  RightGtkView.js  RightPalete.js  RooProjectProperties.js  StandardErrorDialog.js  TODO.txt  TopMenu.js  Window.bjs  Window.js  builder.bjs  builder.js
Builder3/: About.js  DialogConfirm.js  DialogNewComponent.js  DialogSaveTemplate.js  DialogTemplateSelect.js  EditProject.js  Editor.bjs  Editor.js  Editor.js~  Globals.js  Main.js  RooProjectProperties.bjs  RooProjectProperties.js  StandardErrorDialog.js  Window.js
Builder4/: About.bjs  About.js  About.vala  About.vala.c  Application.vala  Application.vala.c  ClutterFiles.bjs  ClutterFiles.js  ClutterFiles.vala  ClutterFiles.vala.c  DialogConfirm.bjs  DialogConfirm.js  DialogConfirm.vala  DialogConfirm.vala.c  DialogNewComponent.bjs  DialogNewComponent.js  DialogNewComponent.vala  DialogNewComponent.vala.c  DialogSaveModule.bjs  DialogSaveModule.js  DialogSaveModule.vala  DialogSaveModule.vala.c  DialogSaveTemplate.bjs  DialogSaveTemplate.js  DialogSaveTemplate.vala  DialogSaveTemplate.vala.c  DialogTemplateSelect.bjs  DialogTemplateSelect.js  DialogTemplateSelect.vala  DialogTemplateSelect.vala.c  EditProject.bjs  EditProject.js  EditProject.vala  EditProject.vala.c  Editor.bjs  Editor.js  Editor.vala  Editor.vala.c  GladeExtras.vala  GladeView.bjs  (+57 more)
ClutterTest/: Window.bjs  Window.js
DependTree/: BuildLists.js  Window.bjs  Window.js
JSDOC/: Collapse.js  Identifier.js  Lang.js  TokenReader.js
JsRender/: Base.js  Base.vala  Gtk.js  Gtk.vala  Gtk.vala.c  JsRender.vala  JsRender.vala.c  Lang.js  Lang.vala  Lang.vala.c  Node.vala  Node.vala.c  NodeToGlade.vala  NodeToGlade.vala.c  NodeToGtk.vala  NodeToJs.vala  NodeToJs.vala.c  NodeToVala.vala  NodeToVala.vala.c  Roo.js  Roo.vala  Roo.vala.c  webkit_extension.c
Palete/: Gir.vala  Gir.vala.c  Gtk.js  Gtk.vala  Gtk.vala.c  GtkUsage.txt  Javascript.vala  Javascript.vala.c  Palete.vala  Palete.vala.c  Roo.js  Roo.vala  Roo.vala.c  RooUsage.txt  ValaSource.vala  ValaSource.vala.c  rooprops.json
Project/: Base.js  Base.vala  Gtk.js  Gtk.vala  Gtk.vala.c  Project.vala  Project.vala.c  Roo.js  Roo.vala  Roo.vala.c
Sample/: About.bjs  About.js  DialogConfirm.bjs  DialogConfirm.js  DialogNewComponent.bjs  DialogNewComponent.js  DialogSaveTemplate.bjs  DialogSaveTemplate.js  DialogTemplateSelect.bjs  DialogTemplateSelect.js  EditProject.bjs  EditProject.js  Editor.bjs  Editor.js  RooProjectProperties.bjs  RooProjectProperties.js  StandardErrorDialog.bjs  StandardErrorDialog.js  Window.bjs  Window.js  builder.bjs  builder.bjs.js  builder.js
XObjectBase/: GdlDock.js  GdlDockItem.js  GtkCellRenderText.js  GtkCellRendererText.js  GtkCellRendererToggle.js  GtkClutterActor.js  GtkClutterEmbed.js  GtkExpander.js  GtkListStore.js  GtkNotebook.js  GtkScrolledWindow.js  GtkTable.js  GtkTreeModelFilter.js  GtkTreeSelection.js  GtkTreeStore.js  GtkTreeView.js  GtkTreeViewColumn.js  WebKitWebView.js
fontconfig/: 7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-3  d52a8644073d54c13679302ca1180695-le64.cache-3
notes/: brainstorming.txt
old-javascript/: Observable.js  Spawn.js  XObject.js  builder.html.js  console.js  dbgenerate.js  test.js
oldbuilder/: AddPropertyPopup.js  LeftPanelPopup.js  LeftProps.js  LeftTree.js  MidPropTree.js  RightBrowser.js  TopMenu.js
pixmaps/: Makefile.am
resources/: Gir.overides  GtkUsage.txt  RooUsage.txt  bootstrap.builder.html  mailer.builder.html  roo.builder.html  roo.builder.js
src/: Application.vala  Main.c  Main.vala  Makefile  Makefile.am  Makefile.in  Resources.vala  Spawn.vala
src/Builder4/: About.bjs  About.c  About.vala  Application.c  ClutterFiles.bjs  ClutterFiles.c  ClutterFiles.vala  CompileState.vala  DialogConfirm.bjs  DialogConfirm.c  DialogNewComponent.bjs  DialogNewComponent.c  DialogNewComponent.vala  DialogPluginWebkit.bjs  DialogPluginWebkit.vala  DialogSaveModule.bjs  DialogSaveModule.c  DialogSaveModule.vala  DialogSaveTemplate.bjs  DialogSaveTemplate.c  DialogSaveTemplate.vala  DialogTemplateSelect.bjs  DialogTemplateSelect.c  DialogTemplateSelect.vala  EditProject.bjs  EditProject.c  EditProject.vala  Editor.bjs  Editor.c  Editor.vala  FakeServer.vala  GtkView.bjs  GtkView.c  GtkView.vala  Main.c  MainWindow.bjs  MainWindow.c  MainWindow.vala  PopoverFileDetails.bjs  PopoverFileDetails.vala  (+37 more)
src/JsRender/: Gtk.c  Gtk.vala  JsRender.c  JsRender.vala  Lang.c  Lang.vala  Node.c  Node.vala  NodeToGlade.c  NodeToGlade.vala  NodeToGtk.c  NodeToGtk.vala  NodeToJs.c  NodeToJs.vala  NodeToVala.c  NodeToVala.vala  PlainFile.vala  Roo.c  Roo.vala  RooDatabase.vala
src/Palete/: CompletionProvider.vala  Gir.c  Gir.vala  GirFile.vala  GirObject.vala  Gtk.c  Gtk.vala  Javascript.c  Javascript.vala  Palete.c  Palete.vala  Roo.c  Roo.vala  RooDatabase.vala  ValaSoucecCompiler.vala  ValaSource.c  ValaSource.vala  ValaSourceCompiler.vala  VapiParser.vala
src/Project/: Gtk.c  Gtk.vala  Project.c  Project.vala  Roo.c
src/c/: jscore_object_call_as_function.c  jscore_object_call_as_function.vala.c
src/vapi/: clutter-1.0.vapi  gtksourceview-3.0.vapi  javascriptcore.vapi  libgda-4.0.vapi  libgda-5.0.vapi
(+117 files in other folders)
